CHANGES.txt - 2009-03-04
------------------------

CHANGES IN CUPS V1.4b3

	- Documentation fixes (STR #3044, STR #3057)
	- The cupstestppd program did not validate the capitalization of
	  filenames in the PPD file.
	- The cupstestppd program did not validate the PageSize and PageRegion
	  values.
	- The cups-deviced helper program could miss reporting some backend
	  devices (STR #3108)
	- The cupsSideChannelSNMP* functions did not work.
	- The scheduler could consume 100% CPU when jobs were canceled.
	- Added complete localizations for Japanese, Polish, and Russian and
	  partial localizations for Chinese, Danish, German, Finnish, French,
	  Italian, Korean, Norwegian, Portuguese, and Swedish (STR #3096,
	  STR #3098, STR #3109, STR #3111)
	- Clicking on "Select Another Make/Manufacturer" in the web interface
	  incorrectly added the printer (STR #3095)
	- The scheduler no longer uses programs with insecure file
	  permissions.
	- httpAssembleURI*() did not escape backslashes in hostnames.
	- The dnssd backend did not unquote "full names" before creating the
	  device URI.
	- The scheduler now supports JobRetryInterval values less than 10
	  seconds.
	- Updated the Spanish localization (STR #3090)
	- The scheduler did not redo Bonjour/DNS-SD registrations when updating
	  them failed.
	- The "authenticated" policy incorrectly required authentication for
	  status operations.
	- ppdOpen*() incorrectly loaded PPDs with multiple JobPatchFile
	  keywords.
	- The network backends no longer report the SNMP "offline" status bit
	  since some printers report this status when the printer is busy
	  printing, warming up, etc.
	- The scheduler no longer logs child processes killed via SIGKILL as
	  "crashed".
	- The printer link shown on the "job moved" template was bad (STR #3085)
	- Updated the HTML templates to use the final HTML 4 DOCTYPE (STR #3086)
	- The scheduler did not track the "paused" reason properly if a
	  printer had other reasons associated with it.